--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,11 @@
 language: python
 python:
-    - 2.7
     - 3.4
-env:
-    - TORNADO_VERSION=4.1 PYTEST_VERSION=2.6.4
 install:
-    - pip install -q tornado==$TORNADO_VERSION pytest==$PYTEST_VERSION
-    - python setup.py install
-script: py.test --strict
+    - pip install -e . --use-mirrors
+before_script:
+    - pip install -r test_requirements.txt --use-mirrors
+script:
+    - py.test repo_manager --strict --cov=repo_manager --cov-report=term-missing --pep8
+after_success:
+  - coveralls
