--- a/.travis.yml
+++ b/.travis.yml
@@ -2,9 +2,9 @@ language: python
 python:
     - 3.4
 install:
-    - pip install -e . --use-mirrors
+    - python setup.py install
 before_script:
-    - pip install -r test_requirements.txt --use-mirrors
+    - pip install -r test_requirements.txt
 script:
     - py.test repo_manager --strict --cov=repo_manager --cov-report=term-missing --pep8
 after_success:
