--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,6 @@ install:
 before_script:
     - pip install -r test_requirements.txt
 script:
-    - py.test repo_manager --strict --cov=repo_manager --cov-report=term-missing --pep8
+    - py.test repo_manager --strict --cov=repo_manager --cov-report=term-missing
 after_success:
   - coveralls
