Try to get the coverage report to post properly to coveralls

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,5 +7,6 @@ before_script:
     - pip install -r test_requirements.txt
 script:
     - py.test repo_manager --strict --cov=repo_manager --cov-report=term-missing
+    - py.test repo_manager --strict --cov=repo_manager
 after_success:
   - coveralls
