Try to get the coverage report to post properly to coveralls

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,4 +9,4 @@ script:
     - py.test repo_manager --strict --cov=repo_manager --cov-report=term-missing
     - py.test repo_manager --strict --cov=repo_manager
 after_success:
-  - coveralls
+  - coveralls debug
